kustomizations/monitoring/jaeger-all-in-one/overlays/gke/jaeger-middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jaeger-auth
spec:
  basicAuth:
    secret: traefik-htpasswd-jaeger
